Fixed some spacing issues

--- a/_scss/_components.scss
+++ b/_scss/_components.scss
@@ -94,15 +94,15 @@
 
     @media (min-width: $mq-md) {
       //padding: 3em 8em;
-      padding: 3em calc(3em + 5em) 3em 2em;
+      padding: 3em calc(3em + 7em) 3em 2em;
     }
 
     @media (min-width: $mq-lg) {
-      padding: 3em calc(3em + 8em) 3em 3em;
+      padding: 3em calc(3em + 10em) 3em 3em;
     }
 
     @media (min-width: $mq-xl) {
-      padding: 3em calc(3em + 8em) 3em 5em;
+      padding: 3em calc(3em + 13em) 3em 5em;
     }
 
     @media (min-width: $mq-xxl) {
