--- a/css/main.css
+++ b/css/main.css
@@ -251,13 +251,13 @@ section {
     position: relative; }
     @media (min-width: 54em) {
       .preview__link {
-        padding: 3em calc(3em + 5em) 3em 2em; } }
+        padding: 3em calc(3em + 7em) 3em 2em; } }
     @media (min-width: 64em) {
       .preview__link {
-        padding: 3em calc(3em + 8em) 3em 3em; } }
+        padding: 3em calc(3em + 10em) 3em 3em; } }
     @media (min-width: 76.5em) {
       .preview__link {
-        padding: 3em calc(3em + 8em) 3em 5em; } }
+        padding: 3em calc(3em + 13em) 3em 5em; } }
     @media (min-width: 114em) {
       .preview__link {
         padding-left: 10em;
@@ -971,17 +971,3 @@ section {
 
 #sj-quote {
   font-size: .9em; }
-
-.videoWrapper {
-  position: relative;
-  padding-bottom: 56.25%;
-  /* 16:9 */
-  padding-top: 25px;
-  height: 0; }
-
-.videoWrapper iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%; }
